# vtable-dumper

./: .gitignore  CMakeLists.txt  LICENSE  error.hpp  flake.nix  main.cpp  meson.build  vtable.cpp  vtable.hpp  vtableextractor.cpp  vtableextractor.hpp
binja/: __init__.py
